Services of create and auth user

--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -54,6 +54,13 @@
         This field should be greater than 6 characters
       </p>
     </div>
+    <div *ngIf="status === 'failed'">
+      <p
+        class="font-medium text-red-500 text-xs mt-1 ml-1"
+      >
+        Email or password incorrect.
+      </p>
+    </div>
   </div>
   <div>
     <app-btn
