Se  crea las rutas de recuperación de contraseña

--- a/src/app/modules/auth/components/forgot-password-form/forgot-password-form.component.html
+++ b/src/app/modules/auth/components/forgot-password-form/forgot-password-form.component.html
@@ -39,6 +39,13 @@
       </p>
     </div>
   </div>
+  <div *ngIf="status === 'failed'">
+    <p
+        class="font-medium text-red-500 text-xs mt-1 ml-1"
+      >
+        Email not forgot.
+      </p>
+  </div>
   <div>
     <app-btn
       typeBtn="submit"
