--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -119,7 +119,7 @@
     </ul>
     <ul class="py-1">
       <li>
-        <a class="block py-2 px-4 text-sm text-gray-700">Log out</a>
+        <a class="block py-2 px-4 text-sm text-gray-700 cursor-pointer" (click)="logOut()" >Log out</a>
       </li>
     </ul>
   </div>
